# rssli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  history.txt
docs/: architecture.md  closures-and-scoping.md
examples/: funcs-in-assert.lsp  funcs-in-vars.lsp  guess-number.lsp  internal-sample.lsp  math-utils.lsp  simple-aritmetic.lsp  simple-closures.lsp  simple-conditionals.lsp  simple-cycles.lsp  simple-funcs.lsp  simple-import.lsp  simple-list.lsp  simple-print.lsp  simple-while.lsp
src/: env.rs  func.rs  lib.rs  main.rs  parse.rs  parser.rs  runtime.rs  tokenizer.rs  utils.rs
src/cli/: interactive.rs  mod.rs
src/corelib/: assert.rs  cast.rs  core.rs  internal.rs  io.rs  list.rs  math.rs  mod.rs  ops.rs  strings.rs  system.rs
