[package]
name = "rssli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.57", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rustyline = "17.0.2"
thiserror = "2"
